workspace-sf/force-app/main/default/objects/CriticaSinistro__c/CriticaSinistro__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as críticas do sinistro.</description>
    <label>Crítica do Sinistro</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Críticas do Sinistro</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>