workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área</label>
    <type>TextArea</type>
</CustomField>