workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/DataFimAnalise__c.field-meta.xml
<CustomField>
    <fullName>DataFimAnalise__c</fullName>
    <label>Data fim análise</label>
    <type>Date</type>
</CustomField>