workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/DataInicioAnalise__c.field-meta.xml
<CustomField>
    <fullName>DataInicioAnalise__c</fullName>
    <description>Data utilizada para calcular o SLA da crítica</description>
    <label>Data início análise</label>
    <type>Date</type>
</CustomField>