workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/DescricaoMotivoRecusa__c.field-meta.xml
<CustomField>
    <fullName>DescricaoMotivoRecusa__c</fullName>
    <label>Descrição do Motivo da Recusa</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>