workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/DisparoAutomaticoEmail__c.field-meta.xml
<CustomField>
    <fullName>DisparoAutomaticoEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disparo Automático de Email</label>
    <type>Checkbox</type>
</CustomField>