workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/GarantiaSinistro__c.field-meta.xml
<CustomField>
    <fullName>GarantiaSinistro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia do Sinistro</label>
    <referenceTo>PagamentoGarantia__c</referenceTo>
    <relationshipName>CriticasSinistro</relationshipName>
    <type>Lookup</type>
</CustomField>