workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/MomentoAnalise__c.field-meta.xml
<CustomField>
    <fullName>MomentoAnalise__c</fullName>
    <label>Momento de análise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Análise interna</fullName>
            </value>
            <value>
                <fullName>Subscrição</fullName>
            </value>
            <value>
                <fullName>Resseguro</fullName>
            </value>
            <value>
                <fullName>Recálculo</fullName>
            </value>
            <value>
                <fullName>Crítica de Controle</fullName>
            </value>
            <value>
                <fullName>Palavra final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>