workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>