workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Média</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>Baixa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>