workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/Procedimento__c.field-meta.xml
<CustomField>
    <fullName>Procedimento__c</fullName>
    <label>Procedimento</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>