workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceitacao</fullName>
                <label>Aceitação</label>
            </value>
            <value>
                <fullName>Emissao</fullName>
                <label>Emissão</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>