workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/Sinistro__c.field-meta.xml
<CustomField>
    <fullName>Sinistro__c</fullName>
    <description>Relacionamento com o caso de sinistro.</description>
    <label>Sinistro</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Críticas do Sinistro</relationshipLabel>
    <relationshipName>CriticasSinistro</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>