workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/StatusSinistro__c.field-meta.xml
<CustomField>
    <fullName>StatusSinistro__c</fullName>
    <formula>Text(Sinistro__r.Status_Dependente__c)</formula>
    <label>Status Sinistro</label>
    <type>Text</type>
</CustomField>