workspace-sf/force-app/main/default/objects/CriticaSinistro__c/fields/TemplateEmail__c.field-meta.xml
<CustomField>
    <fullName>TemplateEmail__c</fullName>
    <label>Template de Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>